# strawberry-elastic

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: README.md  ci.yml  security.yml
examples/: basic_adapter_usage.py  decorator_usage.py
scripts/: README.md  test-integration.sh
src/strawberry_elastic/: __init__.py  decorators.py  exceptions.py
src/strawberry_elastic/clients/: __init__.py  base.py  factory.py
src/strawberry_elastic/clients/adapters/: __init__.py  elasticsearch.py  opensearch.py
src/strawberry_elastic/types/: __init__.py  _dsl_compat.py  field_mapper.py  inspector.py  scalars.py
tests/: __init__.py  conftest.py
tests/clients/: test_factory.py
tests/clients/adapters/: test_elasticsearch.py  test_opensearch.py
tests/decorators/: __init__.py  test_elastic_type.py
tests/types/: __init__.py  test_dsl_compat.py  test_field_mapper.py  test_inspector.py
