[project]
name = "strawberry-elastic"
version = "0.1.0"
description = "GraphQL integration for Elasticsearch and OpenSearch with Strawberry"
readme = "README.md"
authors = [
    { name = "Darwing Medina", email = "darwing1210@gmail.com" }
]
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["graphql", "elasticsearch", "opensearch", "strawberry", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "strawberry-graphql>=0.200",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
# Client dependencies - users choose ONE of these
elasticsearch = ["elasticsearch>=7.0"]  # Supports ES 7.x and 8.x
opensearch = ["opensearch-py>=1.0"]  # Supports OpenSearch 1.x and 2.x

# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "pre-commit>=3.0",
    "ty",
]

[project.urls]
Homepage = "https://github.com/darwing1210/strawberry-elastic"
Documentation = "https://github.com/darwing1210/strawberry-elastic#readme"
Repository = "https://github.com/darwing1210/strawberry-elastic"
Issues = "https://github.com/darwing1210/strawberry-elastic/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strawberry_elastic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "elasticsearch: tests requiring Elasticsearch",
    "opensearch: tests requiring OpenSearch",
    "integration: integration tests requiring running cluster",
    "unit: unit tests not requiring external services",
]

[tool.coverage.run]
source = ["strawberry_elastic"]
branch = true
omit = [
    "*/tests/*",
    "*/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "TRY",    # tryceratops
    "RUF",    # ruff-specific rules
]
ignore = [
    "ANN401",  # Dynamically typed expressions (Any)
    "PLR0913", # Too many arguments to function call
    "TRY003",  # Avoid specifying long messages outside exception class
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",     # No need for type annotations in tests
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of assert detected
]
"examples/**/*.py" = [
    "ANN",     # No need for type annotations in examples
    "T201",    # print found
]
"src/strawberry_elastic/clients/adapters/*.py" = [
    "PLR2004", # Magic value used in comparison (version numbers)
    "TID252",  # Relative imports from parent modules (adapter pattern)
]
"src/strawberry_elastic/clients/factory.py" = [
    "PLC0415", # Import inside function (lazy loading for adapters)
]
"src/strawberry_elastic/__init__.py" = [
    "RUF022",  # __all__ sorting with comments
]

[tool.ruff.lint.isort]
known-first-party = ["strawberry_elastic"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true
